# roster

./: .gitignore  .pylintrc  .~lock.Jones_2019.xlsx#  .~lock.Jones_2019_Reduced.xlsx#  .~lock.Jones_2019_Updated.xlsx#  README.md  pyproject.toml  requirements.txt  roster.py  roster.sublime-project  roster.sublime-workspace  test_roster.py
.github/workflows/: linter.yml  unit_test.yml
